# gnome-shell-extension-ddterm

./: .eslintignore  .eslintrc.yml  .gitignore  Gemfile  Makefile  README.md  _config.yml  application.js  com.github.amezin.ddterm  dependencies-update.js  dependencies.js  dependencies.json  do-in-docker.sh  extension-install-develop.mk  extension-install-system.mk  extension-install-user.mk  extension-install.mk  extension-locales.mk  extension-metadata.mk  extension-pack.mk  extension-schemas.mk  extension.js  extension.mk  index.md  meson.build  meson_options.txt  metadata.json.in  npm.mk  package-lock.json  package.json  packagekit-notification.js  prefs.js  translation-tools.mk  ui.mk  wm.js
.github/problem-matchers/: glib-compile-schemas.json
.github/workflows/: check.yml  common.yml  lint.yml  pack.yml
ddterm/: com.github.amezin.ddterm.Extension.xml
ddterm/app/: application.js  appwindow.js  dependencies-notification.js  extensiondbus.js  notebook.js  terminal.js  terminalpage.js
ddterm/backport/: GObject.js  _common.js
ddterm/pref/: animation.js  behavior.js  colors.js  command.js  compatibility.js  dialog.js  panelicon.js  positionsize.js  scrolling.js  shortcuts.js  tabs.js  text.js  util.js  widget.js
ddterm/pref/glade/: prefs-colors.ui  prefs-position-size.ui
ddterm/pref/test/: common.js
ddterm/settings/: enabled.js  gui.js  schema.js  settings.js
ddterm/settings/codegen/: codegen.js
ddterm/shell/: connectionset.js  dbusapi.js  extension.js  install.js  service.js  subprocess.js  wm.js
ddterm/util/: logger.js  prettyprint.js
glade/: meson.build  prefs.ui
locale/: POTFILES  meson.build  potfiles.py
po/: pl.po  pt.po
qemu/: .gitignore  Makefile  README.md  cloud-config.yml  cloud-init.mk  download.mk  fedora.mk  get-hostfwd-endpoint.expect  qemu-config.mk  ubuntu.mk  vm.mk
qemu/ansible/: deploy.yml  prepare-debian.yml  prepare-redhat.yml
schemas/: com.github.amezin.ddterm.gschema.xml  meson.build
test/: .gitignore  compose.yaml  conftest.py  container_util.py  extension_tests.js  pytest.ini  requirements.txt  systemd_container.py  test_dependencies.py  test_extension.py  tox.ini  xvfb_container.py
test/extension/: extension.js
test/images/: manage.py
test/requirements/: pypi.in  pypi.txt
test/vm/: .gitignore  Makefile
vagrant-provision/: prepare-debian.yml  prepare-redhat.yml
