gtk34_glade_ui = files(
  'prefs-animation.ui',
  'prefs-behavior.ui',
  'prefs-colors.ui',
  'prefs-command.ui',
  'prefs-compatibility.ui',
  'prefs-panel-icon.ui',
  'prefs-position-size.ui',
  'prefs-scrolling.ui',
  'prefs-shortcuts.ui',
  'prefs-tabs.ui',
  'prefs-text.ui',
)

potfiles += gtk34_glade_ui

gtk3_glade_ui = files(
  'appwindow.ui',
  'terminalpage.ui',
)

potfiles += gtk3_glade_ui

xslt_fixup = files('3to4-fixup.xsl')
